--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: 'FontAwesome';
+  font-style: normal;
+  font-weight: 400;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.woff') format('woff');
+}
+
 body {
 	margin-bottom: 70px;
 }
 
-#footer {
+#extension-footer {
 	position: fixed;
 	left: 0px;
 	bottom: 0px;
